--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <h1>Sorting Last Nico</h1>
+    <h1>Sorting Last Name</h1>
   </body>
 </html>
